--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -16,7 +16,7 @@ env:
 concurrency:
   group: "pages"
   cancel-in-progress: true
-  
+
 jobs:
   # One deployment deploy job since we're just deploying
   deploy:
@@ -33,16 +33,16 @@ jobs:
       - name: Select Xcode 16.0
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.0.0'
+          xcode-version: "16.0.0"
       - name: Verify Swift Version
         run: swift --version
-        
+
       - name: Build DocC
         run: |
           swift package resolve;
-          
+
           xcodebuild docbuild -scheme $SCHEME -derivedDataPath /tmp/docbuild -destination 'generic/platform=iOS';
-          
+
           echo "Archiving documentation..."
           $(xcrun --find docc) process-archive \
             transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-iphoneos/$SCHEME.doccarchive \
@@ -50,18 +50,18 @@ jobs:
             --hosting-base-path ${SCHEME};
             
           echo "** Archived documentation**"
-          
+
           # Define the lowercase version of SCHEME
           lowerCaseScheme=$(echo $SCHEME | tr '[:upper:]' '[:lower:]')
-          
+
           # Use the lowercase variable in the redirect script
           echo "<script>window.location.href += \"/documentation/${lowerCaseScheme}\"</script>" > docs/index.html;
-          
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           # Upload only docs directory
-          path: 'docs'
+          path: "docs"
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
